[package]
name = "paypay_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
colored = "2.0.4"
reqwest = { version = "0.11.22", features = ["json", "socks"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"